feat: package standalone Windows executable for v2.0.0
Add a jpackage-based build (FileReader.exe + bundled runtime) and a
Launcher entry point, since JavaFX refuses to start when the class
extending Application is launched directly off a plain classpath.